--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
     <script src="sketch.js"></script>
+     <script src="matter.js"></script>
+      <script src="p5.js"></script>
+      
+
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
